--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,6 @@ VITE_ADMIN_ADDRESS=0xYourAdminWalletHere
 # Deployed CrimeTrace contract address (from Hardhat deploy script)
 VITE_CRIME_TRACE_ADDRESS=0xYourCrimeTraceContractAddress
 
-# IPFS HTTP client credentials (e.g. Infura project)
-VITE_IPFS_PROJECT_ID=your-ipfs-project-id
-VITE_IPFS_PROJECT_SECRET=your-ipfs-project-secret
-# Optional custom IPFS HTTP endpoint URL
-# VITE_IPFS_ENDPOINT=https://ipfs.infura.io:5001
+# Pinata API credentials for IPFS uploads
+VITE_PINATA_API_KEY=your-pinata-api-key
+VITE_PINATA_API_SECRET=your-pinata-api-secret
